<?xml version="1.0"?>
<package format="2">
  <name>lidar_camera</name>
  <version>0.0.0</version>
  <description>Lidar-camera fussion for colored pointcloud and depth image </description>

  <maintainer email="p_sumejko@yahoo.com">Pavel Shumejko</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>

</package>
